Add build small fix

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
                     this.load();
 
-                    ga('create', this.id, {'storage': 'none'});
+                    ga('create', this.trackingId, {'storage': 'none'});
                     ga('send', 'event', 'Cookie Consent', 'Declined');
                 }
             });
