--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.5.0/css/foundation-float.css"/>
 
-    <script type="text/javascript" src="src/rc-consent.js"></script>
+    <script type="text/javascript" src="dist/rc-consent.min.js"></script>
     <script type="text/javascript" id="rcc_consent_GA">
         window.addEventListener("load", function() {
             window.rcc.addProvider({
