--- a/index.html
+++ b/index.html
@@ -301,14 +301,7 @@
         //Init form field on Modal Open
         $consentModal.on('open.zf.reveal', function () {
 
-            var consent_status = rcc.getStatus();
-
-            $( 'input[name][type="checkbox"]' ).each(function( index ) {
-
-                $( this ).attr("checked", (consent_status[this.name] === true ? true : false));
-            });
-
-
+            rcc.setForm($consentModal.get(0));
         });
 
     })(jQuery, rcc);
