--- a/index.html
+++ b/index.html
@@ -15,17 +15,22 @@
                 trackingId: 'UA-128378883-1',
                 anonymizeIp: true,
                 load: function() {
-                    if (typeof ga !== 'undefined') { return false; }
-                    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-                        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-                        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-                    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+                    if (typeof ga === 'undefined') {
+                        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+                        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+                    }
                 },
                 onInitialise: function (rcc, status) {
                     console.log('GA Consent init');
 
                     if (rcc.hasConsented(this.category)) {
                         console.log('hasConsented: true');
+                        this.load();
+                        ga('create', this.trackingId, 'auto');
+                        ga('set', 'anonymizeIp', this.anonymizeIp);
+                        ga('send', 'pageview');
                     }
                     else {
                         console.log('hasConsented: false');
@@ -44,7 +49,6 @@
                     console.log('GA consent revoke:' + this.category);
 
                     this.load();
-
                     ga('create', this.trackingId, {'storage': 'none'});
                     ga('send', 'event', 'Cookie Consent', 'Declined');
                 }
@@ -80,21 +84,25 @@
             window.rcc.addProvider({
                 id: 'hotjar',
                 category: 'required',
+                trackingId: 1070708,
                 load: function () {
-                    (function(h,o,t,j,a,r){
-                        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-                        h._hjSettings={hjid:1070708,hjsv:6};
-                        a=o.getElementsByTagName('head')[0];
-                        r=o.createElement('script');r.async=1;
-                        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-                        a.appendChild(r);
-                    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+                    if (typeof hj === 'undefined') {
+                        (function(h,o,t,j,a,r,i){
+                            h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+                            h._hjSettings={hjid:i,hjsv:6};
+                            a=o.getElementsByTagName('head')[0];
+                            r=o.createElement('script');r.async=1;
+                            r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+                            a.appendChild(r);
+                        })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=', undefined, undefined, this.trackingId);
+                    }
                 },
                 onInitialise: function (rcc, status) {
                     console.log('HOTJAR Consent init');
 
                     if (rcc.hasConsented(this.category)) {
                         console.log('hasConsented: true');
+                        this.load();
                     }
                     else {
                         console.log('hasConsented: false');
@@ -102,7 +110,6 @@
                 },
                 onAllow: function (rcc) {
                     console.log('HOTJAR consent allow:' + this.category);
-
                     this.load();
                 },
                 onRevoke: function (rcc) {
